--- a/HelloDoc/Views/Admin_Dash/Admin_Dash.cshtml
+++ b/HelloDoc/Views/Admin_Dash/Admin_Dash.cshtml
@@ -3,6 +3,7 @@
 @{
     ViewData["Title"] = "Admin_Dash";
     Layout = "~/Views/Shared/_Admin_Dash.cshtml";
+    int i = 0;
 }
 <style>
     .triangle {
@@ -167,6 +168,7 @@
                     <option  data-value="1">One</option>
                     <option data-value="2">Two</option>
                     <option  data-value="3">Three</option>
+                    <option  data-value="4">four</option>
                 </select>
             </div>
         </div>
@@ -210,7 +212,55 @@
 
     </div>
       
+    <div class="modal fade" id="modalForm" tabindex="-1" aria-labelledby="exampleModalLabel">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-header bg-info">
+                    <h1 class="modal-title fs-5  text-white" id="exampleModalLabel">Confirm Cancellation</h1>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <form id="ModalFormsubmit">
+                    <div class="modal-body">
+                        <p> Patient Name : <span id="text"></span></p>
+                        <select class="form-select" aria-label="Default select example" name="Reason">
 
+                            
+                            @foreach (var item in Model)
+                            {
+                                @if(i == 0)
+                                {
+                                    @foreach (var it in item.cases)
+                                    {
+                                       <option value="@it.CaseTagId">@it.Name</option>
+                                    }
+                                }
+                                i++;
+                            }
+                           @*  <option selected>Reason For Cancellation</option>
+                            <option value="2">Cost Issue</option>
+                            <option value="3">Insurance Issue</option>
+                            <option value="4">Out of Service Area</option>
+                            <option value="5">Not appropriate for service</option>
+                            <option value="6">Referral to Clinic or Hospital</option> *@
+                        </select>
+
+                        <input id="requestid"  name="Requestid" hidden/>
+                        <div class="form-floating mt-3">
+                            <textarea class="form-control" name="Notes" placeholder="Leave a comment here" id="floatingTextarea2" style="height: 100px"></textarea>
+                            <label for="floatingTextarea2">provide Additional Notes</label>
+                        </div>
+
+                    </div>
+                    <div class="modal-footer">
+                        <div class="d-flex justify-content-end mt-3">
+                            <a> <button type="submit" class="btn btn-info">Confirm</button></a>
+                            <button type="button" data-bs-dismiss="modal" class="btn btn-outline-info ms-3">cancle</button>
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
 
        
         @* -------------------------------Search--------------------------------------------- *@
@@ -222,7 +272,6 @@
     <partial name="Admin_TableConclude" model="@Model"></partial>
     <partial name="Admin_TableToClose" model="@Model"></partial>
     <partial name="Admin_TableUnPaid" model="@Model"></partial>
-
  </div>
 
 
@@ -306,11 +355,11 @@
             $("#Pending").click(function () {
                  currentPartialview = "Admin_TablePending"
                  currentstatus=[2]
-                    filtertable(currentPartialview, currentstatus);
-
+                 filtertable(currentPartialview, currentstatus);
                 $('#textspan').text('(pending)');
                 $('.triangle').css('display', 'none');
                 $('#trapending').css('display', 'block').css('border-top', '20px solid  #0dcaf0');
+                
             });
 
             $("#Active").click(function () {
@@ -416,7 +465,33 @@
                 }
             }
 
-            
+
+
+               
+
+                $('#ModalFormsubmit').submit(function (event) {
+                    event.preventDefault();
+
+                    var formData = $(this).serialize();
+                    console.log(formData);
+                    $.ajax({
+                        url: '/Admin_Dash/CancelCase',
+                        type: 'POST',
+                        data: formData,
+                        success: function (response) {
+
+                            $('#modalForm').modal('hide');
+                            window.location.href = "/Admin_Dash/Admin_Dash";
+                        },
+                        error: function (xhr, status, error) {
+
+                            console.error('Error submitting form:', error);
+                        }
+                    });
+                });
+                $('#modalForm').on('hidden.bs.modal', function () {
+                    $(this).find('form')[0].reset();
+                });
 
           
         });
