--- a/HelloDoc/Views/Admin_Dash/Admin_TableNew.cshtml
+++ b/HelloDoc/Views/Admin_Dash/Admin_TableNew.cshtml
@@ -4,10 +4,12 @@
 *@
 @* ---------------table---------------------------- *@
 
+<!-- Button trigger modal -->
+
+<!-- Modal -->
+
 
 <table class="table text-center table-responsive-lg" id="table">
-   
-    
    
     <thead class="table-secondary">
         <tr class="fs-5">
@@ -50,6 +52,7 @@
                                 <path fill-rule="evenodd" d="M1.885.511a1.745 1.745 0 0 1 2.61.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.68.68 0 0 0 .178.643l2.457 2.457a.68.68 0 0 0 .644.178l2.189-.547a1.75 1.75 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.6 18.6 0 0 1-7.01-4.42 18.6 18.6 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877z" />
                             </svg>@item.PhoneNumber
                         </button><br /><span>(Patient)</span>
+
                     </td>
                     <td class="my-auto">@item.Address</td>
                     <td class="my-auto">@item.Notes</td>
@@ -75,15 +78,17 @@
                                 </a>
                             </li>
                             <li>
-                                <a class="dropdown-item" href="#">
+                                
+                                    <button type="button"  onclick="openModal(this)" data-requestid="@item.requestid" data-name="@item.Name">
                                     <svg xmlns="http://www.w3.org/2000/svg" class="me-3" width="16" height="16" fill="currentColor" class="bi bi-x-circle" viewBox="0 0 16 16">
                                         <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14m0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16" />
                                         <path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708" />
                                     </svg>Cancel Case
-                                </a>
+                                </button> 
+                              
                             </li>
                             <li>
-                                <a asp-action="ViewCase" asp-route-id="@item.reqclientid">
+                                <a asp-action="ViewCase" asp-route-id="@item.reqclientid" asp-route-status="@item.status">
                                     <button class="dropdown-item">
                                     <svg xmlns="http://www.w3.org/2000/svg" class="me-3" width="16" height="16" fill="currentColor" class="bi bi-journal-arrow-up" viewBox="0 0 16 16">
                                         <path fill-rule="evenodd" d="M8 11a.5.5 0 0 0 .5-.5V6.707l1.146 1.147a.5.5 0 0 0 .708-.708l-2-2a.5.5 0 0 0-.708 0l-2 2a.5.5 0 1 0 .708.708L7.5 6.707V10.5a.5.5 0 0 0 .5.5" />
@@ -178,7 +183,7 @@
                                 </a>
                             </li>
                             <li>
-                                <a asp-action="ViewCase" asp-route-id="@item.reqclientid">
+                                <a asp-action="ViewCase" asp-route-id="@item.reqclientid" asp-route-status="@item.status">
                                     <button class="dropdown-item">
                                     <svg xmlns="http://www.w3.org/2000/svg" class="me-3" width="16" height="16" fill="currentColor" class="bi bi-journal-arrow-up" viewBox="0 0 16 16">
                                         <path fill-rule="evenodd" d="M8 11a.5.5 0 0 0 .5-.5V6.707l1.146 1.147a.5.5 0 0 0 .708-.708l-2-2a.5.5 0 0 0-.708 0l-2 2a.5.5 0 1 0 .708.708L7.5 6.707V10.5a.5.5 0 0 0 .5.5" />
@@ -188,7 +193,7 @@
                                 </button></a>
                             </li>
                             <li>
-                                <a asp-action="ViewNotes">
+                                <a asp-action="ViewNotes" asp-route-id="@item.requestid">
                                     <button class="dropdown-item">
                                         <svg xmlns="http://www.w3.org/2000/svg" class="me-3" width="16" height="16" fill="currentColor" class="bi bi-journal-text" viewBox="0 0 16 16">
                                             <path d="M5 10.5a.5.5 0 0 1 .5-.5h2a.5.5 0 0 1 0 1h-2a.5.5 0 0 1-.5-.5m0-2a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5m0-2a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5m0-2a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5" />
@@ -272,7 +277,7 @@
                                 </a>
                             </li>
                             <li>
-                                <a asp-action="ViewCase" asp-route-id="@item.reqclientid">
+                                <a asp-action="ViewCase" asp-route-id="@item.reqclientid" asp-route-status="@item.status">
                                     <button class="dropdown-item">
                                     <svg xmlns="http://www.w3.org/2000/svg" class="me-3" width="16" height="16" fill="currentColor" class="bi bi-journal-arrow-up" viewBox="0 0 16 16">
                                         <path fill-rule="evenodd" d="M8 11a.5.5 0 0 0 .5-.5V6.707l1.146 1.147a.5.5 0 0 0 .708-.708l-2-2a.5.5 0 0 0-.708 0l-2 2a.5.5 0 1 0 .708.708L7.5 6.707V10.5a.5.5 0 0 0 .5.5" />
@@ -283,7 +288,7 @@
                                 </a>
                             </li>
                             <li>
-                                <a asp-action="ViewNotes">
+                                <a asp-action="ViewNotes" asp-route-id="@item.requestid">
                                     <button class="dropdown-item">
                                         <svg xmlns="http://www.w3.org/2000/svg" class="me-3" width="16" height="16" fill="currentColor" class="bi bi-journal-text" viewBox="0 0 16 16">
                                             <path d="M5 10.5a.5.5 0 0 1 .5-.5h2a.5.5 0 0 1 0 1h-2a.5.5 0 0 1-.5-.5m0-2a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5m0-2a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5m0-2a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5" />
@@ -367,7 +372,7 @@
                                 </a>
                             </li>
                             <li>
-                                <a asp-action="ViewCase" asp-route-id="@item.reqclientid">
+                                <a asp-action="ViewCase" asp-route-id="@item.reqclientid" asp-route-status="@item.status">
                                     <button class="dropdown-item">
                                         <svg xmlns="http://www.w3.org/2000/svg" class="me-3" width="16" height="16" fill="currentColor" class="bi bi-journal-arrow-up" viewBox="0 0 16 16">
                                             <path fill-rule="evenodd" d="M8 11a.5.5 0 0 0 .5-.5V6.707l1.146 1.147a.5.5 0 0 0 .708-.708l-2-2a.5.5 0 0 0-.708 0l-2 2a.5.5 0 1 0 .708.708L7.5 6.707V10.5a.5.5 0 0 0 .5.5" />
@@ -378,7 +383,7 @@
                                 </a>
                             </li>
                             <li>
-                                <a asp-action="ViewNotes">
+                                <a asp-action="ViewNotes" asp-route-id="@item.requestid">
                                     <button class="dropdown-item">
                                         <svg xmlns="http://www.w3.org/2000/svg" class="me-3" width="16" height="16" fill="currentColor" class="bi bi-journal-text" viewBox="0 0 16 16">
                                             <path d="M5 10.5a.5.5 0 0 1 .5-.5h2a.5.5 0 0 1 0 1h-2a.5.5 0 0 1-.5-.5m0-2a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5m0-2a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5m0-2a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5" />
@@ -400,11 +405,10 @@
                     </td>
                 </tr>
             }
+             
+           
 
-
-
-
-        }
+}
 
     </tbody>
     
@@ -562,3 +566,20 @@
 
 
   @* ---------------table---------------------------- *@
+  <script>
+    function openModal(btn) {
+        console.log("Button clicked");
+
+        const myModal = document.getElementById("modalForm");
+        var bsModal = new bootstrap.Modal(myModal);
+        bsModal.show();
+
+        const requestid = btn.getAttribute('data-requestid');
+        document.getElementById('requestid').value = requestid;
+        const name = btn.getAttribute('data-name');
+        document.getElementById('text').textContent = name;
+
+    }
+
+
+  </script>
