--- a/HelloDoc/Views/Admin_Dash/Admin_TableToClose.cshtml
+++ b/HelloDoc/Views/Admin_Dash/Admin_TableToClose.cshtml
@@ -29,7 +29,7 @@
         @foreach (var item in Model)
         {
 
-            if (item.requesttypeid == 1 && item.status == 3 || item.status == 7 || item.status == 8)
+            if (item.requesttypeid == 1 )
             {
                 @*   <tr style="background-color:#5FBC61 !important; color:white !important;"> *@
                 <tr class="table-success">
@@ -95,7 +95,7 @@
                                 </a>
                             </li>
                             <li>
-                                <a asp-action="ViewNotes">
+                                <a asp-action="ViewNotes" asp-route-id="@item.requestid">
                                     <button class="dropdown-item">
                                         <svg xmlns="http://www.w3.org/2000/svg" class="me-3" width="16" height="16" fill="currentColor" class="bi bi-journal-text" viewBox="0 0 16 16">
                                             <path d="M5 10.5a.5.5 0 0 1 .5-.5h2a.5.5 0 0 1 0 1h-2a.5.5 0 0 1-.5-.5m0-2a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5m0-2a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5m0-2a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5" />
@@ -119,7 +119,7 @@
             }
 
 
-            else if (item.requesttypeid == 2 && item.status == 3 || item.status == 7 || item.status == 8)
+            else if (item.requesttypeid ==2)
             {
                 @*   <tr style="background-color:#5FBC61 !important; color:white !important;"> *@
                 <tr class="table-warning">
@@ -185,7 +185,7 @@
                                 </a>
                             </li>
                             <li>
-                                <a asp-action="ViewNotes">
+                                <a asp-action="ViewNotes" asp-route-id="@item.requestid">
                                     <button class="dropdown-item">
                                         <svg xmlns="http://www.w3.org/2000/svg" class="me-3" width="16" height="16" fill="currentColor" class="bi bi-journal-text" viewBox="0 0 16 16">
                                             <path d="M5 10.5a.5.5 0 0 1 .5-.5h2a.5.5 0 0 1 0 1h-2a.5.5 0 0 1-.5-.5m0-2a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5m0-2a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5m0-2a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5" />
@@ -207,7 +207,7 @@
                     </td>
                 </tr>
             }
-            else if (item.requesttypeid == 3 && item.status == 3 || item.status == 7 || item.status == 8)
+            else if (item.requesttypeid == 3 )
             {
                 @*   <tr style="background-color:#5FBC61 !important; color:white !important;"> *@
                 <tr class="table-info">
@@ -274,7 +274,7 @@
                                 </a>
                             </li>
                             <li>
-                                <a asp-action="ViewNotes">
+                                <a asp-action="ViewNotes" asp-route-id="@item.requestid">
                                     <button class="dropdown-item">
                                         <svg xmlns="http://www.w3.org/2000/svg" class="me-3" width="16" height="16" fill="currentColor" class="bi bi-journal-text" viewBox="0 0 16 16">
                                             <path d="M5 10.5a.5.5 0 0 1 .5-.5h2a.5.5 0 0 1 0 1h-2a.5.5 0 0 1-.5-.5m0-2a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5m0-2a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5m0-2a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5" />
@@ -297,7 +297,7 @@
                 </tr>
             }
 
-            else if (item.requesttypeid == 4 && item.status == 3 || item.status == 7 || item.status == 8)
+            else if (item.requesttypeid == 4 )
             {
                 @*   <tr style="background-color:#5FBC61 !important; color:white !important;"> *@
                 <tr class="table-danger">
@@ -374,7 +374,7 @@
                                 </a>
                             </li>
                             <li>
-                                <a asp-action="ViewNotes">
+                                <a asp-action="ViewNotes" asp-route-id="@item.requestid">
                                     <button class="dropdown-item">
                                         <svg xmlns="http://www.w3.org/2000/svg" class="me-3" width="16" height="16" fill="currentColor" class="bi bi-journal-text" viewBox="0 0 16 16">
                                             <path d="M5 10.5a.5.5 0 0 1 .5-.5h2a.5.5 0 0 1 0 1h-2a.5.5 0 0 1-.5-.5m0-2a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5m0-2a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5m0-2a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5" />
