--- a/HelloDoc/Views/Admin_Dash/Admin_TableUnPaid.cshtml
+++ b/HelloDoc/Views/Admin_Dash/Admin_TableUnPaid.cshtml
@@ -27,7 +27,7 @@
         @foreach (var item in Model)
         {
 
-            if (item.requesttypeid == 1 && item.status == 9)
+            if (item.requesttypeid == 1)
             {
                 @*   <tr style="background-color:#5FBC61 !important; color:white !important;"> *@
                 <tr class="table-success">
@@ -100,7 +100,7 @@
                                 </a>
                             </li>
                             <li>
-                                <a asp-action="ViewNotes">
+                                <a asp-action="ViewNotes" asp-route-id="@item.requestid">
                                     <button class="dropdown-item">
                                         <svg xmlns="http://www.w3.org/2000/svg" class="me-3" width="16" height="16" fill="currentColor" class="bi bi-journal-text" viewBox="0 0 16 16">
                                             <path d="M5 10.5a.5.5 0 0 1 .5-.5h2a.5.5 0 0 1 0 1h-2a.5.5 0 0 1-.5-.5m0-2a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5m0-2a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5m0-2a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5" />
@@ -124,7 +124,7 @@
             }
 
 
-            else if (item.requesttypeid == 2 && item.status == 9)
+            else if (item.requesttypeid == 2)
             {
                 @*   <tr style="background-color:#5FBC61 !important; color:white !important;"> *@
                 <tr class="table-warning">
@@ -201,7 +201,7 @@
                                 </a>
                             </li>
                             <li>
-                                <a asp-action="ViewNotes">
+                                <a asp-action="ViewNotes" asp-route-id="@item.requestid">
                                     <button class="dropdown-item">
                                         <svg xmlns="http://www.w3.org/2000/svg" class="me-3" width="16" height="16" fill="currentColor" class="bi bi-journal-text" viewBox="0 0 16 16">
                                             <path d="M5 10.5a.5.5 0 0 1 .5-.5h2a.5.5 0 0 1 0 1h-2a.5.5 0 0 1-.5-.5m0-2a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5m0-2a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5m0-2a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5" />
@@ -223,7 +223,7 @@
                     </td>
                 </tr>
             }
-            else if (item.requesttypeid == 3 && item.status == 9)
+            else if (item.requesttypeid == 3 )
             {
                 @*   <tr style="background-color:#5FBC61 !important; color:white !important;"> *@
                 <tr class="table-info">
@@ -301,7 +301,7 @@
                                 </a>
                             </li>
                             <li>
-                                <a asp-action="ViewNotes">
+                                <a asp-action="ViewNotes" asp-route-id="@item.requestid">
                                     <button class="dropdown-item">
                                         <svg xmlns="http://www.w3.org/2000/svg" class="me-3" width="16" height="16" fill="currentColor" class="bi bi-journal-text" viewBox="0 0 16 16">
                                             <path d="M5 10.5a.5.5 0 0 1 .5-.5h2a.5.5 0 0 1 0 1h-2a.5.5 0 0 1-.5-.5m0-2a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5m0-2a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5m0-2a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5" />
@@ -324,7 +324,7 @@
                 </tr>
             }
 
-            else if (item.requesttypeid == 4 && item.status == 9)
+            else if (item.requesttypeid == 4 )
             {
                 @*   <tr style="background-color:#5FBC61 !important; color:white !important;"> *@
                 <tr class="table-danger">
@@ -400,7 +400,7 @@
                                 </a>
                             </li>
                             <li>
-                                <a asp-action="ViewNotes">
+                                <a asp-action="ViewNotes" asp-route-id="@item.requestid">
                                     <button class="dropdown-item">
                                         <svg xmlns="http://www.w3.org/2000/svg" class="me-3" width="16" height="16" fill="currentColor" class="bi bi-journal-text" viewBox="0 0 16 16">
                                             <path d="M5 10.5a.5.5 0 0 1 .5-.5h2a.5.5 0 0 1 0 1h-2a.5.5 0 0 1-.5-.5m0-2a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5m0-2a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5m0-2a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5" />
@@ -408,6 +408,7 @@
                                             <path d="M1 5v-.5a.5.5 0 0 1 1 0V5h.5a.5.5 0 0 1 0 1h-2a.5.5 0 0 1 0-1zm0 3v-.5a.5.5 0 0 1 1 0V8h.5a.5.5 0 0 1 0 1h-2a.5.5 0 0 1 0-1zm0 3v-.5a.5.5 0 0 1 1 0v.5h.5a.5.5 0 0 1 0 1h-2a.5.5 0 0 1 0-1z" />
                                         </svg>View Notes
                                     </button>
+
                                 </a>
                             </li>
                             <li>
