--- a/HelloDoc/Views/Admin_Dash/ViewCase.cshtml
+++ b/HelloDoc/Views/Admin_Dash/ViewCase.cshtml
@@ -6,6 +6,9 @@
      Layout = "~/Views/Shared/_Admin_Dash.cshtml";
 }
 
+
+
+
 <div class="bg-body-secondary">
     <div class="mx-auto pt-4  pb-3" style="width:70%;">
         <div class="d-flex justify-content-between my-2">
@@ -150,9 +153,13 @@
                         </div>
 
                     <div class="d-flex justify-content-end my-1">
-                        <button onclick="toggleEdit()" type="button" class="btn border-none bg-info p-2 text-light fw-semibold me-4" id="EditBtn">
-                            Assign
-                        </button>
+
+                        @if (Model.status == 1)
+                        {
+                            <button onclick="toggleEdit()" type="button" class="btn border-none bg-info p-2 text-light fw-semibold me-4" id="AssignBtn">
+                                Assign
+                            </button>
+                        }
                         <button onclick="toggleSave()" type="submit" class="btn border-none bg-info p-2 text-light fw-semibold me-4" id="SaveBtn">
                             View Notes
                         </button>
