--- a/HelloDoc/Views/Admin_Dash/ViewCase.cshtml
+++ b/HelloDoc/Views/Admin_Dash/ViewCase.cshtml
@@ -160,10 +160,12 @@
                                 Assign
                             </button>
                         }
-                        <button onclick="toggleSave()" type="submit" class="btn border-none bg-info p-2 text-light fw-semibold me-4" id="SaveBtn">
-                            View Notes
-                        </button>
-                        <button onclick="toggleCancle()" class="btn border-none bg-danger p-2 text-light fw-semibold me-4" id="CancleBtn">
+                        <a asp-action="ViewNotes" asp-controller="Admin_Dash" asp-route-id="@Model.requestid">
+                            <button  type="button" class="btn border-none bg-info p-2 text-light fw-semibold me-4" id="SaveBtn">
+                                View Notes
+                            </button>
+                        </a>
+                        <button type="button" class="btn border-none bg-danger p-2 text-light fw-semibold me-4" onclick="openModal(this)" data-requestid="@Model.requestid" data-name="@Model.FirstName">
                             Cancle
                         </button>
                     </div>
@@ -174,5 +176,114 @@
     </div>
      </div>
 
+@* -------------------------------Modal--------------------------------------------- *@
+<div class="modal fade" id="modalForm" tabindex="-1" aria-labelledby="exampleModalLabel">
+    <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+            <div class="modal-header bg-info">
+                <h1 class="modal-title fs-5  text-white" id="exampleModalLabel">Confirm Cancellation</h1>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
 
-@*  *@
+
+            <form id="ModalFormsubmit">
+                <div class="modal-body">
+                    <p> Patient Name : <span id="text"></span></p>
+                    <select class="form-select" aria-label="Default select example" name="Reason">
+
+
+                    
+                            
+                                @foreach (var it in Model.cases)
+                                {
+                                    <option value="@it.CaseTagId">@it.Name</option>
+                                }
+                            }
+ 
+                        @*  <option selected>Reason For Cancellation</option>
+                        <option value="2">Cost Issue</option>
+                        <option value="3">Insurance Issue</option>
+                        <option value="4">Out of Service Area</option>
+                        <option value="5">Not appropriate for service</option>
+                        <option value="6">Referral to Clinic or Hospital</option> *@
+                    </select>
+
+                    <input id="requestid" name="Requestid" hidden />
+                    <div class="form-floating mt-3">
+                        <textarea class="form-control" name="Notes" placeholder="Leave a comment here" id="floatingTextarea2" style="height: 100px"></textarea>
+                        <label for="floatingTextarea2">provide Additional Notes</label>
+                    </div>
+
+                </div>
+                <div class="modal-footer">
+                    <div class="d-flex justify-content-end mt-3">
+                         <button type="submit" class="btn btn-info">Confirm</button>
+                        <button type="button" data-bs-dismiss="modal" class="btn btn-outline-info ms-3">cancle</button>
+                    </div>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
+@* -------------------------------Modal--------------------------------------------- *@
+@* -------------------------*@
+@section scripts {
+    <!-- jQuery script -->
+    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="~/lib/jquery/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+
+    <script>
+
+
+        function openModal(btn) {
+            console.log("Button clicked");
+
+            const myModal = document.getElementById("modalForm");
+            var bsModal = new bootstrap.Modal(myModal);
+            bsModal.show();
+
+            const requestid = btn.getAttribute('data-requestid');
+            document.getElementById('requestid').value = requestid;
+            const name = btn.getAttribute('data-name');
+            document.getElementById('text').textContent = name;
+
+        }
+
+
+        $(document).ready(function () {
+
+            $('#ModalFormsubmit').submit(function (event) {
+                event.preventDefault();
+
+                var formData = $(this).serialize();
+                console.log(formData);
+                $.ajax({
+                    url: '/Admin_Dash/CancelCase',
+                    type: 'POST',
+                    data: formData,
+                    success: function (response) {
+
+                        $('#modalForm').modal('hide');
+                        window.location.href = "/Admin_Dash/Admin_Dash";
+                    },
+                    error: function (xhr, status, error) {
+
+                        console.error('Error submitting form:', error);
+                    }
+                });
+            });
+            $('#modalForm').on('hidden.bs.modal', function () {
+                $(this).find('form')[0].reset();
+            });
+
+
+        });
+
+    </script>
+}
+
+
+
+@* ------------------------- *@
+
